--- a/package.json
+++ b/package.json
@@ -23,46 +23,41 @@
 		"sass compiler"
 	],
 	"config": {
-		"out": "public/assets"
+		"out": "dist"
 	},
 	"scripts": {
 		"scss": "node-sass -o $npm_package_config_out/css/ src/scss/",
-		"postcss": "postcss $npm_package_config_out/css/main.css -m -o $npm_package_config_out/css/main.min.css",
-		"terser": "mkdirp $npm_package_config_out/js && terser src/js/*.js -o $npm_package_config_out/js/main.js && terser src/js/*.js -m -c -o $npm_package_config_out/js/main.min.js",
-		"imagemin": "imagemin src/image/* --out-dir=$npm_package_config_out/image",
-		"svgo": "mkdirp $npm_package_config_out/svg && svgo -f src/svg -o $npm_package_config_out/svg",
-		"livereload": "livereload .",
+		"prefix": "postcss $npm_package_config_out/css/main.css -m -o $npm_package_config_out/css/main.min.css",
+		"terser": "mkdirp $npm_package_config_out/js && terser src/js/*.js -m -c -o $npm_package_config_out/js/main.min.js",
+		"imagemin": "imagemin src/assets/img/* --out-dir=$npm_package_config_out/assets/img",
+		"svgo": "mkdirp $npm_package_config_out/assets/svg && svgo -f src/assets/svg -o $npm_package_config_out/assets/svg",
+		"server": "live-server --open=src/",
 		"clean:all": "rimraf $npm_package_config_out/",
 		"clean:code": "rimraf $npm_package_config_out/{css,js}",
 		"clean": "run-s clean:*",
-		"copy:fonts": "cp -a src/font $npm_package_config_out/",
-		"copy:assets": "cp -a src/{font,image,svg} $npm_package_config_out/",
-		"build:css": "run-s scss postcss",
+		"copy:fonts": "cp -a src/assets/fonts $npm_package_config_out/assets",
+		"copy:assets": "cp -a src/assets/{fonts,img,svg} $npm_package_config_out/assets",
+		"build:css": "run-s scss prefix",
 		"build:js": "run-s terser",
 		"build:assets": "run-s imagemin svgo copy:fonts",
-		"build:markup": "html-minifier --input-dir src --output-dir public --collapse-whitespace --remove-comments --remove-optional-tags --remove-tag-whitespace --use-short-doctype --minify-css true --minify-js true --file-ext html",
-		"build": "mkdirp $npm_package_config_out && run-s clean build:*",
-		"dev": "mkdirp $npm_package_config_out && run-p build:css build:js copy:fonts copy:assets build:markup",
-		"watch:css": "onchange 'src/scss' -- run-s build:css",
-		"watch:js": "onchange 'src/js' -- run-s build:js",
-		"watch:assets": "onchange 'src/font' 'src/image' 'src/svg' -- run-s copy:assets",
-		"watch:markup": "onchange 'src/**/*.html' -- run-s build:markup",
-		"watch": "mkdirp $npm_package_config_out && run-p watch:* livereload"
+		"build:markup": "html-minifier --input-dir src/ --output-dir dist/ --collapse-whitespace --remove-comments --remove-redundant-attributes --remove-script-type-attributes --remove-tag-whitespace --use-short-doctype --minify-css true --minify-js true --file-ext html",
+		"watch:css": "node-sass --output-style=expanded --source-map=true src/scss/main.scss src/css/main.css --recursive --w",
+		"watch": "run-p watch:* server ",
+		"build": "mkdirp $npm_package_config_out && run-s clean build:* copy:fonts copy:assets"
 	},
 	"devDependencies": {
-		"autoprefixer": "^9.6.1",
+		"autoprefixer": "^9.7.4",
+		"clean-css-cli": "^4.3.0",
 		"cssnano": "^4.1.10",
 		"html-minifier": "^4.0.0",
-		"imagemin-cli": "^5.0.0",
-		"livereload": "^0.8.1",
-		"mkdirp": "^0.5.1",
-		"node-sass": "^4.12.0",
+		"imagemin-cli": "^5.1.0",
+		"mkdirp": "^1.0.3",
+		"node-sass": "^4.13.1",
 		"npm-run-all": "^4.1.5",
-		"onchange": "^5.2.0",
 		"pixrem": "^5.0.0",
-		"postcss-cli": "^6.1.3",
-		"rimraf": "^2.6.3",
-		"svgo": "^1.3.0",
-		"terser": "^4.1.2"
+		"postcss-cli": "^7.1.0",
+		"rimraf": "^3.0.2",
+		"svgo": "^1.3.2",
+		"terser": "^4.6.6"
 	}
 }
